assets/css/style.css
/*Global*/

/*this can be replaced with a JS function*/
button::first-letter, h2::first-letter {
    text-transform:capitalize;
}

/*Header*/

.weather-header{
    height: 15vh;
    background: rgb(136,195,237);
    background: linear-gradient(90deg, rgba(136,195,237,1) 0%, rgba(51,130,187,1) 22%, rgba(51,98,187,1) 50%, rgba(32,9,76,1) 100%);
}

.weather-header h1 {
    width: 96%;
    padding-top: 3rem;
    font-size: 6rem;
}

/*Search area*/

aside {
    padding-top: 4.5rem;
}

.h2-heading{
    font-size: 2.7rem;
}

#search-input {
    border-radius: 0.6rem;
    width: 100%;
    height: 4rem;
    font-size: 2rem;
}

#search-button {
    width: 100%;
    height: 3rem;
    border: 2px solid #81b4ed;
    background-color: #5098e6;
    color: white;
    border-radius: 0.6rem;
    font-size: 1.9rem;
}

.hr {
    border: 0.1rem solid #d0d0d0;   
}

/*History area*/

.city-buttons {
    width: 100%;
    height: 3rem;
    border: 2px solid #d0d0d0;
    background-color: #aeaeae;
    color: black;
    border-radius: 0.6rem;
    font-size: 1.9rem;

    /* TODO: should be dynamically added in createCityBtn() */
    
    margin-bottom: 1.5rem;
    padding-top: 1rem;
    padding-bottom: 3.5rem;
}

/*Today's Section*/

.today-style {
    border: 0.2rem solid #d0d0d0;
    border-radius: 0.6rem; 
}

#today > p {
    font-size: 1.5rem;  
}

/*Forecast section*/

.dayDiv {
    border: 0.2rem solid #d0d0d0;
    padding: 1rem;
    background-color: #2d3e50;
    color: white;
    border-radius: 0.6rem;
}

.dayDiv h2 {
    text-align: center;
    font-weight: bold;
}

.dayDiv p {
    font-size: 1.5rem;
}

.dayDiv img {
    width: 90%;
    margin: auto;
}

#today, #wrap {
    margin: 1rem;
    padding: 1rem;
}

